--- a/Al Emsakia - الامساكية/QeblaCompass/QeblaView/Qebla.storyboard
+++ b/Al Emsakia - الامساكية/QeblaCompass/QeblaView/Qebla.storyboard
@@ -9,23 +9,55 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Qebla View Controller-->
         <scene sceneID="agD-SO-lr8">
             <objects>
-                <viewController id="PbD-OD-DeZ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="QeblaViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="PbD-OD-DeZ" customClass="QeblaViewController" customModule="Al_Emsakia___الامساكية" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2I6-SC-eX8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Qebla" translatesAutoresizingMaskIntoConstraints="NO" id="xjM-gz-Y2r">
+                                <rect key="frame" x="0.0" y="241" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xjM-gz-Y2r" secondAttribute="height" multiplier="1:1" id="2st-3y-0rF"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NMh-u6-AiU">
+                                <rect key="frame" x="0.0" y="772" width="414" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="NMh-u6-AiU" secondAttribute="height" multiplier="23:5" id="b3G-iO-r5b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <state key="normal" title="العودة الي الرئيسية"/>
+                                <connections>
+                                    <action selector="backToMain:" destination="PbD-OD-DeZ" eventType="touchUpInside" id="dbo-a1-mRI"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="hiT-Bi-C2C"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hiT-Bi-C2C" firstAttribute="bottom" secondItem="NMh-u6-AiU" secondAttribute="bottom" id="9GZ-Qg-Sed"/>
+                            <constraint firstItem="hiT-Bi-C2C" firstAttribute="trailing" secondItem="NMh-u6-AiU" secondAttribute="trailing" id="DJl-qj-rYl"/>
+                            <constraint firstItem="xjM-gz-Y2r" firstAttribute="centerX" secondItem="2I6-SC-eX8" secondAttribute="centerX" id="GMs-aH-iod"/>
+                            <constraint firstItem="NMh-u6-AiU" firstAttribute="leading" secondItem="hiT-Bi-C2C" secondAttribute="leading" id="JYh-qv-uij"/>
+                            <constraint firstItem="xjM-gz-Y2r" firstAttribute="centerY" secondItem="2I6-SC-eX8" secondAttribute="centerY" id="Tg1-Kf-bmH"/>
+                            <constraint firstItem="xjM-gz-Y2r" firstAttribute="trailing" secondItem="hiT-Bi-C2C" secondAttribute="trailing" id="WzY-LG-Ef0"/>
+                            <constraint firstItem="xjM-gz-Y2r" firstAttribute="leading" secondItem="hiT-Bi-C2C" secondAttribute="leading" id="qW2-zs-CQ1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="xjM-gz-Y2r" id="A8y-Ec-ACq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9bt-7e-RFw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="270" y="90"/>
+            <point key="canvasLocation" x="269.56521739130437" y="89.732142857142847"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Qebla" width="200" height="200"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
